# MCS

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  aclocal.m4  config.status  configure  configure.ac  libtool  reconf  requirePkg.pl  selectflags.pl  selectlibs.pl  selectphp_path.pl  selectswig_ver.pl  version
autom4te.cache/: output.0  output.1  output.2  (+4 more)
contrib/libjson/: Makefile  Makefile.am  Makefile.in
contrib/libjson/.deps/: json_reader.Plo  json_value.Plo  json_writer.Plo
contrib/libjson/.libs/libmcsjson.0.dylib.dSYM/Contents/: Info.plist
doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  admin.tex  mcs-foot.html.in  mcs.tex  old_mcs.tex
doc/html/: BaseThread_8cc-source.html  BaseThread_8cc_source.html  Client_8cc-source.html  Client_8cc_source.html  CommandParser_8cc-source.html  CommandParser_8cc_source.html  Conf_8cc-source.html  Conf_8cc_source.html  Data_8cc-source.html  Data_8cc_source.html  Db_8cc-source.html  Db_8cc_source.html  Env_8cc-source.html  Env_8cc_source.html  Event_8cc-source.html  Event_8cc_source.html  LocalThread_8cc-source.html  LocalThread_8cc_source.html  Main_8cc-source.html  Main_8cc_source.html  Readers_8cc-source.html  Readers_8cc_source.html  Record_8cc-source.html  Record_8cc_source.html  Serializable_8cc-source.html  Serializable_8cc_source.html  Server_8cc-source.html  Server_8cc_source.html  Socket_8cc-source.html  Socket_8cc_source.html  Thread_8cc-source.html  Thread_8cc_source.html  UserThread_8cc-source.html  UserThread_8cc_source.html  Utils_8cc-source.html  Utils_8cc_source.html  Writers_8cc-source.html  Writers_8cc_source.html  annotated.html  annotated.js  (+425 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_7e.js  all_8.js  all_a.js  all_c.js  all_d.js  (+102 more)
doc/includes/: Makefile  SAVE.fig  client.cc.tex  client.cc.tex~  client.php.tex  client.php.tex~  client.pro.tex  client.pro.tex~  client_c.c.tex  client_c.c.tex~  client_f.f.tex  client_f.f.tex~  diaggen.eps  diaggen.fig  diaggen_sdams.fig  dirs.eps  dirs.fig  echosrv.cc.tex  echosrv.cc.tex~  flow.eps  flow.fig  simpleclient.c.tex  simpleclient.c.tex~  simpleclient.cc.tex  simpleclient.cc.tex~  simpleclient_c.c.tex  simpleclient_c.c.tex~  simplest.cc.tex  simplest.cc.tex~  sport_logo_gray.eps  thread.eps
share/: Makefile  Makefile.am  Makefile.in
share/client/: Makefile  Makefile.am  Makefile.in
share/client/idl/: Makefile  Makefile.am  Makefile.in  c2idl.pl  c2idl.pl.in  idl2mcs.c  idl2mcs.dlm  incl.h  temp.h
share/client/perl/: Makefile  Makefile.am  Makefile.in  perl2mcs.i
share/client/php/: Makefile  Makefile.am  Makefile.in  php2mcs.i  php_php2mcs.h
share/client/python/: Makefile  Makefile.am  Makefile.in  python2mcs.i  searchInstallPath.py
share/examples/: Makefile  Makefile.am  Makefile.in  README  buffer  buffer.cc  client  client.cc  client1  client1.cc  client_c  client_c.c  command_parser  command_parser.cc  conf  conf.cc  data  data.cc  data1  data1.cc  datetime  datetime.cc  db1  db1.cc  db2  db2.cc  fits2dbt  fits2dbt.cc  fitsimg  fitsimg.cc  pipe  pipe.cc  server1  server1.cc
share/examples/.deps/: buffer.Po  client.Po  client1.Po  client_c.Po  data.Po  data1.Po  db1.Po  db2.Po  pipe.Po  server1.Po
share/examples/.libs/: buffer  client  client1  client_c  data  data1  db1  db2  server1
share/examples/.libs/buffer.dSYM/Contents/: Info.plist
share/examples/.libs/buffer.dSYM/Contents/Resources/DWARF/: buffer
share/examples/.libs/client.dSYM/Contents/Resources/DWARF/: client
share/examples/.libs/client1.dSYM/Contents/Resources/DWARF/: client1
share/examples/.libs/client_c.dSYM/Contents/: Info.plist
share/examples/.libs/client_c.dSYM/Contents/Resources/DWARF/: client_c
share/examples/.libs/data.dSYM/Contents/Resources/DWARF/: data
share/examples/.libs/data1.dSYM/Contents/Resources/DWARF/: data1
share/examples/.libs/db1.dSYM/Contents/: Info.plist
share/examples/.libs/db1.dSYM/Contents/Resources/DWARF/: db1
share/examples/.libs/db2.dSYM/Contents/: Info.plist
share/examples/.libs/db2.dSYM/Contents/Resources/DWARF/: db2
share/examples/.libs/server1.dSYM/Contents/Resources/DWARF/: server1
share/scripts/: Makefile  Makefile.am  Makefile.in  idl2mcs  idl2mcs.in  mcs-config  mcs-config.in
share/test/: Makefile  README  battest  c_bind.c  client.cc  commandparser.cc  data.cc  data.cc~  db.cc  db.cc~  ddd.cc  ddd.cc~  f_bind.F  f_prova.f  ffopen.c  fitslist  fitsreader.cc  fitsresult2  group.h  mcs.conf  parsetime.cc  php_bind.php  piperw.cc  record.cc  server.cc  stressClient.cc  test.h  thread.cc  trial-votable-fits-inline.vot.001  urlreader.cc  votablesplit.binstream.001  votablesplit.cc
share/test/aux/: IMG064A003.fits  fitsreader.cmp  idl_commands  ieee_values.fits.b64  query2.cmp  query2_32.cmp  query2_64.cmp  query3.cmp  rosat_pspc_rdf2_3_bk2.fits  rosat_pspc_rdf2_3_bk3.fits  rosat_pspc_rdf2_3_mex.fits  script  urlreader_test  xte_type2.pha.fits
share/test/srv/: sqltest
share/test/srv/mcstest/: query.out
share/test/tmp/: PUTtest
src/: BaseThread.cc  Client.cc  CommandParser.cc  Conf.cc  Data.cc  Db.cc  Env.cc  Event.cc  LocalThread.cc  Main.cc  Makefile  Makefile.am  Makefile.in  Readers.cc  Record.cc  Serializable.cc  Server.cc  Socket.cc  Thread.cc  UserThread.cc  Utils.cc  Writers.cc  b64codec  b64codec.cc  beautify.pl  c2fortran.pl  doc.h  doc.h.in  killmcs  killmcs.cc  mcs.hh  mcs_c.cc  mcs_c.h  mcs_c.pre.h  mcs_config.h  mcs_config.h.in  mcs_facility.inc  mcs_fortran.c  mcs_fortran.inc  mcscreatekey.cc  (+9 more)
src/b64codec.dSYM/Contents/: Info.plist
src/b64codec.dSYM/Contents/Resources/DWARF/: b64codec
src/mcsexec.dSYM/Contents/: Info.plist
src/mcsexec.dSYM/Contents/Resources/DWARF/: mcsexec
(+21 files in other folders)
