libmcsjson_includedir=$(includedir)/json


lib_LTLIBRARIES=libmcsjson.la

libmcsjson_la_SOURCES=\
json_reader.cpp\
json_writer.cpp\
json_value.cpp

EXTRA_DIST=json_valueiterator.inl

libmcsjson_include_HEADERS=\
json_batchallocator.h\
json_tool.h\
json/autolink.h\
json/config.h\
json/features.h\
json/forwards.h\
json/json.h\
json/reader.h\
json/value.h\
json/writer.h 
